--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 distlib==0.3.8
 Django==5.0.2
-docutils==0.21.2
-filelock==3.0.12
+docutils==0.21.2c
+filelock==3.0.0,<4
 Flask==3.0.2
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==3.1.1
