--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,6 @@
-alchemy==20.5
-asgiref==3.7.2
-Babel==2.15.0
-blinker==1.7.0
-CacheControl==0.14.0
-certifi==2023.7.22
-chardet==3.0.4
-charset-normalizer==3.3.2
-click==8.1.7
-distlib==0.3.8
-Django==5.0.2
-docutils==0.21.2c
-filelock==3.0.0,<4
-Flask==3.0.2
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-idna==2.8
-itsdangerous==2.1.2
-Jinja2==3.1.3
-lockfile==0.12.2
-lxml==5.1.0
-MarkupSafe==2.1.5
-msgpack==1.0.8
-packaging==24.0
-pipenv==2023.12.1
-platformdirs==4.2.0
-psycopg2-binary==2.9.9
-python-daemon==2.2.4
-pywebcopy==7.0.2
-requests==2.22.0
-six==1.16.0
-sql==2022.4.0
-SQLAlchemy==2.0.30
-sqlite3-qt==0.1.0
-sqlparse==0.4.4
-tkcalendar==1.6.1
-typing_extensions==4.11.0
-urllib3==1.25.11
-virtualenv==20.25.1
-Werkzeug==3.0.1
+Flask
+Flask-Mail
+Flask-SQLAlchemy
+Werkzeug
+gunicorn
+Jinja2
