--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,6 @@
-alchemy==20.5
-asgiref==3.7.2
-Babel==2.15.0
-blinker==1.7.0
-build==1.2.1
-CacheControl==0.14.0
-certifi==2023.7.22
-chardet==3.0.4
-charset-normalizer==3.3.2
-click==8.1.7
-distlib==0.3.8
-Django==5.0.2
-docutils==0.21.2
-filelock==3.0.12
-Flask==3.0.2
-flask-googlemaps==0.4.1
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==3.1.1
-ghp-import==2.1.0
-greenlet==3.0.3
-htmlmin==0.1.12
-idna==2.8
-itsdangerous==2.1.2
-Jinja2==3.1.3
-jsmin==3.0.1
-lockfile==0.12.2
-lxml==5.1.0
-Markdown==3.6
-MarkupSafe==2.1.5
-mergedeep==1.3.4
-mkdocs==1.6.0
-mkdocs-get-deps==0.2.0
-mkdocs-material==5.5.14
-mkdocs-material-extensions==1.3.1
-mkdocs-minify-plugin==0.3.0
-msgpack==1.0.8
-packaging==24.0
-pathspec==0.12.1
-pip-tools==7.4.1
-pipenv==2023.12.1
-platformdirs==4.2.0
-psycopg2-binary==2.9.9
-Pygments==2.18.0
-pymdown-extensions==10.8.1
-pyproject_hooks==1.1.0
-python-daemon==2.2.4
-python-dateutil==2.9.0.post0
-pywebcopy==7.0.2
-PyYAML==6.0.1
-pyyaml_env_tag==0.1
-requests==2.32.3
-six==1.16.0
-sql==2022.4.0
-SQLAlchemy==2.0.30
-sqlite3-qt==0.1.0
-sqlparse==0.4.4
-tkcalendar==1.6.1
-typing_extensions==4.11.0
-urllib3==1.25.11
-virtualenv==20.25.1
-watchdog==4.0.1
-Werkzeug==3.0.1
+Flask
+Flask-Mail
+Flask-SQLAlchemy
+Werkzeug
+gunicorn
+Jinja2
